--- a/src/index.css
+++ b/src/index.css
@@ -53,3 +53,16 @@ h1 {
     @apply font-bold cursor-pointer text-white py-2 px-4 rounded-full hover:scale-105 ease-in-out focus:outline-none;
   }
 }
+
+@keyframes slide-up {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-100%);
+  }
+}
+
+.animate-slide-up {
+  animation: slide-up 0.3s ease-in forwards;
+}
